turmites.lessons.turmites.langton.Langton.scala.code
def step() {
	if (getCouleurSol() == Color.white) {
		setBrosseCouleur(black)
	baisseBrosse()
	leveBrosse()
		droite()
		avance()
	}else{
		setBrosseCouleur(Color.white);
	baisseBrosse();
	leveBrosse();;
		gauche();
		avance();
		}
	
}

